Updating overflow issues

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -26,7 +26,7 @@
   width: 100vw;
   background-image: url(../public/galleryPic_13.JPG);
   background-size: 100% 130%;
-  background-color: black;
+  overflow: hidden;
 }
 
 .main {
